--- a/Job 2 Go/Base.lproj/Main.storyboard
+++ b/Job 2 Go/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search-->
+        <!--Search View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="SearchViewController" customModule="Job_2_Go" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,20 +18,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="byG-wu-8gp">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="byG-wu-8gp">
+                                <rect key="frame" x="0.0" y="62" width="375" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="byG-wu-8gp" firstAttribute="bottom" secondItem="PQr-Ze-W5v" secondAttribute="bottom" id="NZ7-g8-XPG"/>
+                            <constraint firstItem="byG-wu-8gp" firstAttribute="trailing" secondItem="PQr-Ze-W5v" secondAttribute="trailing" id="Vjd-BC-dWJ"/>
+                            <constraint firstItem="byG-wu-8gp" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="kDy-FA-Jiy"/>
+                            <constraint firstItem="byG-wu-8gp" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="-46" id="vNV-AI-Kkc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Search" image="search" id="acW-dT-cKf"/>
+                    <navigationItem key="navigationItem" id="Jzf-k6-vaj"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="760.79999999999995" y="-729.08545727136436"/>
+            <point key="canvasLocation" x="781.60000000000002" y="-833.43328335832086"/>
         </scene>
         <!--Profile-->
         <scene sceneID="nGm-h1-356">
@@ -47,7 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hdi-mM-aQV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1745" y="-363"/>
+            <point key="canvasLocation" x="2084" y="-363.86806596701655"/>
         </scene>
         <!--Chat-->
         <scene sceneID="adz-CD-Vvg">
@@ -65,10 +70,10 @@
             </objects>
             <point key="canvasLocation" x="1745" y="339"/>
         </scene>
-        <!--My Jobs-->
+        <!--my jobs-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="MyjobsViewController" customModule="Job_2_Go" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="my jobs" id="8rJ-Kc-sve" customClass="MyjobsViewController" customModule="Job_2_Go" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -76,6 +81,7 @@
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="My Jobs" image="portfolio" id="cPa-gy-q4n"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
@@ -85,6 +91,7 @@
         <scene sceneID="yl2-sM-qoP">
             <objects>
                 <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -92,7 +99,7 @@
                         <color key="selectedImageTintColor" red="0.0077189668081700802" green="0.74573612213134766" blue="0.52415430545806885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
+                        <segue destination="Lu3-Kq-XdI" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="GCZ-ew-1Ue" kind="relationship" relationship="viewControllers" id="c0A-eY-wMI"/>
                         <segue destination="HXl-8G-qDa" kind="relationship" relationship="viewControllers" id="G3S-pD-AAz"/>
@@ -101,6 +108,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-28" y="-64"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="LdT-uh-QJl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Lu3-Kq-XdI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" image="search" id="acW-dT-cKf"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rr8-Aw-YTH">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="87d-K8-2QC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zbP-Mt-T8Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-284" y="-833"/>
         </scene>
     </scenes>
     <resources>
